--- a/MonCV.html
+++ b/MonCV.html
@@ -13,7 +13,8 @@
 		
 		<header>
   		<li><a class="active" href="MonCV.html">Accueil</a></li>
-  		<li><a href="Compétences.html">Compétences</a></li>
+  		<li><a href="Formations.html"> Formations</a></li>
+   		<li><a href="Compétences.html">Compétences</a></li>
   		<li><a href="Experiences.html">Expériences Professionelles</a></li>
   		<li><a href="Hobbies.html">Hobbies</a></li>
   		<li><a href="Contact.html">Contact</a></li>
