--- a/Hobbies.html
+++ b/Hobbies.html
@@ -11,17 +11,18 @@
 
 	<body> 
 		<header>
-  		<li><a class="active" href="MonCV.html">Accueil</a></li>
-  		<li><a href="Compétences.html">Compétences</a></li>
+  		<li><a href="MonCV.html">Accueil</a></li>
+  		<li><a href="Formations.html"> Formations</a></li>
+   		<li><a href="Compétences.html">Compétences</a></li>
   		<li><a href="Experiences.html">Expériences Professionelles</a></li>
-  		<li><a href="Hobbies.html">Hobbies</a></li>
+  		<li><a class="active" href="Hobbies.html">Hobbies</a></li>
   		<li><a href="Contact.html">Contact</a></li>
 		</header>
 
 
 	<div align="center" style="margin-top: 5%"> 
 		<h2>SPORT</h2><br>
-		<h4>Je pratique le football depuis 13 ans ainsi que la natation estivale depuis 10 ans.
+		<h4>Je pratique le football depuis 13 ans ainsi que la natation estivale depuis 10 ans.</h4>
 		<br>
 		<h2>MUSIQUE</h2><br>
 		<h4>J'écoute principalement du rap (US ou FR).</h4>
@@ -29,7 +30,6 @@
 		<h2>CINEMA</h2><br>
 		<h4>J'aime regarder des films fantastiques, de science fiction, comiques.</h4>
 		
-	</h4>
 	</div>
 </body>
 </html>
