--- a/Contact.html
+++ b/Contact.html
@@ -11,11 +11,12 @@
 
 	<body> 
 		<header>
-  		<li><a class="active" href="MonCV.html">Accueil</a></li>
-  		<li><a href="Compétences.html">Compétences</a></li>
+  		<li><a href="MonCV.html">Accueil</a></li>
+  		<li><a href="Formations.html"> Formations</a></li>
+   		<li><a href="Compétences.html">Compétences</a></li>
   		<li><a href="Experiences.html">Expériences Professionelles</a></li>
   		<li><a href="Hobbies.html">Hobbies</a></li>
-  		<li><a href="Contact.html" download="CV.docx">Contact</a></li>
+  		<li><a class="active" href="Contact.html">Contact</a></li>
 		</header>
 
 		<div align="center" style="margin-top: 10%"> 
