--- a/compétences.html
+++ b/compétences.html
@@ -11,8 +11,9 @@
 
 	<body> 
 		<header>
-  		<li><a class="active" href="MonCV.html">Accueil</a></li>
-  		<li><a href="Compétences.html">Compétences</a></li>
+  		<li><a href="MonCV.html">Accueil</a></li>
+  		<li><a href="Formations.html"> Formations</a></li>
+   		<li><a class="active" href="Compétences.html">Compétences</a></li>
   		<li><a href="Experiences.html">Expériences Professionelles</a></li>
   		<li><a href="Hobbies.html">Hobbies</a></li>
   		<li><a href="Contact.html">Contact</a></li>
